# microservice

./: .env.example  docker-compose.yaml  frontend.conf
backend/: Dockerfile  app.py  pyproject.toml  schemas.py  settings.py
posts/: app.py  database.py  models.py  pyproject.toml  routing.py  services.py  settings.py
posts/alembic/: env.py
posts/alembic/versions/: 26dbcc50c18d_add_postorm.py  2ad72ef7281a_add_author_field_to_post.py  84821c75adcb_add_post_model.py
